<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_voluntarios"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_text"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView3"
        android:layout_weight="0" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray_light">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/light"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/light"
            android:textColorHint="@color/light" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray_light">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:backgroundTint="@color/light"
            android:id="@+id/passwordText"
            android:hint="@string/prompt_password"
            android:layout_weight="0"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textLoginError"
        android:layout_weight="0"
        android:enabled="true" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:id="@+id/progressLogin"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/loginButton"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:text="@string/action_sign_in" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_new_account"
        android:id="@+id/registerButton"
        android:layout_weight="0"
        android:layout_marginTop="20dp"
        android:onClick="registerView"
        style="@style/adjacentButton"/>

    <TextView
        android:text="@string/version"
        android:layout_marginTop="10dp"
        android:textColor="@color/light"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="0" />
</LinearLayout>