<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_emergency_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.citiaps.coordinaciondevoluntarios.activity.EmergencyDetailActivity">


    <fragment
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/missionRecruitedMapFragment"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />


    <TextView
        android:id="@+id/missionRecruitedDetailAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/missionRecruitedMapFragment"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="TextView"
        android:textAppearance="@style/smallLink"
        tools:text="@string/mission_address" />


    <Button
        android:text="@string/mission_recruited_interest_no"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/missionRecruitedDetailInterestNo"
        android:onClick="missionInterestResponse"
        style="@style/adjacentButton"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/mission_recruited_interest_yes"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/missionRecruitedDetailInterestYes"
        android:onClick="missionInterestResponse"
        style="@style/mainButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/mission_participate_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:id="@+id/missionRecruitedDetailParticipatingInterest"
        tools:text="@string/mission_participate_question"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_above="@+id/missionRecruitedDetailInterestNo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/missionRecruitedDetailDescriptionLabel"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/missionRecruitedDetailAdress"
        android:layout_marginTop="15dp"
        android:text="@string/mission_description_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/mission_description_label" />

    <TextView
        android:id="@+id/missionRecruitedDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/mission_description"
        android:layout_below="@+id/missionRecruitedDetailDescriptionLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/open_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColorLink="@color/light"
        android:text="@string/open_map"
        android:textAppearance="@style/smallLink" />

</RelativeLayout>
