<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_finished_misson"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.citiaps.coordinaciondevoluntarios.activity.FinishedMissonActivity">

    <TextView
        android:text="@string/finished_mission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/finishedMissionTit"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/finished_mission_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/finishedMissionDesc"
        android:layout_below="@+id/finishedMissionTit"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:text="@string/back_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/returnBtn"
        style="@style/mainButton"
        android:onClick="toMain" />

    <Button
        android:text="@string/rate_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/returnBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:id="@+id/rateFriendsBtn"
        style="@style/AppTheme.textButton" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_check"
        android:id="@+id/imageView3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
