<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo_voluntarios"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Registro"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView3"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstNameContainer"
        android:layout_below="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray_light">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/light"
            android:ems="10"
            android:hint="@string/prompt_nombre"
            android:inputType="textPersonName"
            android:textColor="@color/light"
            android:textColorHint="@color/light" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameContainer"
        android:textColorHint="@color/gray_light">

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/light"
            android:ems="10"
            android:hint="@string/prompt_apellido"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameContainer"
        android:textColorHint="@color/gray_light">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/light"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailContainer"
        android:textColorHint="@color/gray_light">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:backgroundTint="@color/light"
            android:id="@+id/pass"
            android:hint="@string/prompt_password"
            android:layout_weight="0"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPassContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passContainer"
        android:textColorHint="@color/gray_light">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:backgroundTint="@color/light"
            android:id="@+id/confirmPass"
            android:hint="Confirmar contraseña"
            android:layout_weight="0"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textLoginError"
        android:layout_weight="0"
        android:enabled="true" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:id="@+id/progressLogin"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/siguienteButton"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="Siguiente"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:layout_centerHorizontal="true"
       android:textColor="@color/light"
       android:layout_below="@+id/confirmPassContainer"
       android:text="Ya tienes una cuenta? Ingresa!"/>
 
</RelativeLayout>