<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.citiaps.coordinaciondevoluntarios.activity.IndexNoEmergencyActivity"
    android:clipToPadding="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_logo_voluntarios" />

    <RelativeLayout
        android:layout_marginTop="250dp"
        android:background="@drawable/btn_default"
        android:id="@+id/lytEmergencyBtn"
        android:layout_height="50dp"
        style="@style/buttonLayout"
        android:onClick="showEmergencies">

        <TextView
            android:id="@+id/lytEmergencyText"
            android:text="@string/emergency_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonText"
            />

        <ImageView
            android:id="@+id/numEmergencyBkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle"
            style="@style/notificationNumber"/>

        <TextView
            android:id="@+id/numEmergencyTxt"
            android:text="1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            style="@style/notificationNumber"
            android:textColor="@color/secondary_darker"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/lytEmergencyBtn"
        android:layout_marginTop="18dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_default"
        android:id="@+id/lytMissionsBtn"
        style="@style/buttonLayout"
        android:onClick="showMissions">

        <TextView
            android:id="@+id/lytMissionsText"
            android:text="@string/mission_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/buttonText"
            />

        <ImageView
            android:id="@+id/numMissionsBkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle"
            style="@style/notificationNumber"/>

        <TextView
            android:id="@+id/numMissionsTxt"
            android:text="1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            style="@style/notificationNumber"
            android:textColor="@color/secondary_darker"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18dp"/>

    </RelativeLayout>



    <Button
        android:layout_below="@id/lytMissionsBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/current_mission"
        android:id="@+id/buttonCurrentMission"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:onClick="currentMission"
        style="@style/mainButton"
        android:enabled="false"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCurrentMission"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/progressBarMain"
        android:visibility="gone" />



</RelativeLayout>
